Fixed a bug where a <td class="right"> wouldn't get right-aligned if it was within a <table class="data">

--- a/src/resources/css/craft.scss
+++ b/src/resources/css/craft.scss
@@ -129,6 +129,9 @@ strong, b, i em { font-weight: bold; font-family: sans-serif; }
 .left { float: left; }
 .right { float: right; }
 
+th,
+td { text-align: left; vertical-align: middle; }
+
 th.right,
 td.right { float: none; text-align: right; }
 
@@ -426,7 +429,7 @@ table.data td:not(:first-child) { padding-left: 10px; }
 table.data thead th,
 table.data thead td { padding-top: 4px; padding-bottom: 4px; cursor: default; }
 table.data tbody th,
-table.data tbody td { padding-top: 7px; padding-bottom: 7px; text-align: left; vertical-align: middle; border-top: 1px dotted $hrcolor; }
+table.data tbody td { padding-top: 7px; padding-bottom: 7px; border-top: 1px dotted $hrcolor; }
 table.data tbody tr:last-child th,
 table.data tbody tr:last-child td { border-bottom: 1px dotted $hrcolor; }
 table.data thead + tbody tr:first-child th,
